Added test paragraph

--- a/lamborghini.html
+++ b/lamborghini.html
@@ -63,6 +63,11 @@
             <p class="promo__text">автодром Портимао,Португалия</p>
             <a class="promo__arrow" href="#">
               <img src="images/arrow.svg" alt="arrow" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Deleniti quaerat perspiciatis maxime aperiam esse libero facere
+                hic impedit quisquam suscipit?
+              </p>
             </a>
           </div>
         </div>
