--- a/lamborghini.html
+++ b/lamborghini.html
@@ -13,12 +13,16 @@
     family=Roboto+Condensed:ital,wght@0, 300;0,400;0, 700;1,400&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="big_container">
         <nav class="nav">
           <ul class="menu-list menu-left">
             <li class="menu-item">
@@ -53,7 +57,7 @@
     </header>
     <main class="main">
       <section class="promo">
-        <div class="container">
+        <div class="big_container">
           <div class="promo__inner">
             <h1 class="title">LAMBORGHINI SUPER TROFEO</h1>
             <h2 class="subtitle">
@@ -63,16 +67,415 @@
             <p class="promo__text">автодром Портимао,Португалия</p>
             <a class="promo__arrow" href="#">
               <img src="images/arrow.svg" alt="arrow" />
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Deleniti quaerat perspiciatis maxime aperiam esse libero facere
-                hic impedit quisquam suscipit?
-              </p>
             </a>
           </div>
         </div>
       </section>
+      <section class="info">
+        <div class="container">
+          <div class="info__part info__part_one">
+            <h3 class="info__title">СУПЕР ТРОФЕО МИРОВОЙ ФИНАЛ</h3>
+            <div class="info__part_textbox">
+              <p class="info__text">
+                Мировой финал Lamborghini завершает каждый сезон Super Trofeo с
+                2013 года. Каждый год гонщики всех континентальных чемпионатов
+                отправляются на разные трассы и принимают участие в двух
+                50-минутных спринтерских гонках, где определяется победитель в
+                общем зачете. как чемпион мира Lamborghini. Мировой финал
+                Lamborghini — это не только крупнейший гоночный уик-энд года, но
+                и настоящий фестиваль автоспорта, который привлекает поклонников
+                со всего мира.
+              </p>
+              <b class="info__text">
+                Парад владельцев, превью и развлечения в паддоке для болельщиков
+                — это лишь некоторые из мероприятий, организованных в рамках
+                мероприятия.</b
+              >
+            </div>
+            <img class="info__part_img" src="images/info-1.jpg" alt="" />
+          </div>
+          <div class="info__part info__part_second">
+            <div class="info__content">
+              <h3 class="info__title">КОМАНДЫ СУПЕР ТРОФЕО</h3>
+              <p class="info__text">
+                Все автомобили, которые участвуют в чемпионатах Lamborghini
+                Super Trofeo, управляются частными командами, которые используют
+                свой опыт для тонкой настройки их для водителей. Для каждого
+                континентального чемпионата Lamborghini Super Trofeo существуют
+                рейтинги пилотов и команд.
+              </p>
+              <p class="info__text">
+                Пилоты и команды, участвующие в континентальной серии, каждый
+                год соревнуются друг с другом в Гранд Финале Lamborghini,
+                мероприятии, которое завершает спортивный сезон Super Trofeo.
+                Две квалификационные сессии и две гонки определяют чемпионов
+                мира серии. Каждый год Гранд-финал проводится на разных трассах,
+                и в прошлых выпусках он уже затрагивал европейский, азиатский и
+                американский континенты.
+              </p>
+            </div>
+            <img class="info__part_img" src="images/info-2.png" alt="" />
+          </div>
+          <div class="info__part info__part_table_third">
+            <div class="info__content">
+              <h3 class="info__title">
+                календарь сезона Super Trofeo Europe 2022 года
+              </h3>
+              <p class="info__text">
+                14 в истории серии GT, посвященный автомобилям Lamborghini
+                Huracan Super Trofeo Evo. Шесть этапов, в общей сложности 12
+                гонок и 600 минут соревнований будут разыграны на некоторых из
+                самых престижных трасс Европы.
+              </p>
+            </div>
+            <table class="info__table">
+              <tr>
+                <td>Этап 1:</td>
+                <td>Имола (Италия)</td>
+                <td>1-3 апреля</td>
+              </tr>
+              <tr>
+                <td>Этап 2:</td>
+                <td>Ле-Кастелле (Франция)</td>
+                <td>3–5 июня</td>
+              </tr>
+              <tr>
+                <td>Этап 3:</td>
+                <td>Мизано (Италия)</td>
+                <td>1–3 июля</td>
+              </tr>
+              <tr>
+                <td>Этап 4:</td>
+                <td>Спа-Франкоршам (Бельгия)</td>
+                <td>29–30 июля</td>
+              </tr>
+              <tr>
+                <td>Этап 5:</td>
+                <td>Барселона (Испания)</td>
+                <td>30 сентября–2 октября</td>
+              </tr>
+              <tr>
+                <td>Этап 6:</td>
+                <td>Портимао (Португалия)</td>
+                <td>3-4 ноября</td>
+              </tr>
+              <tr>
+                <td>Гранд-финал 2022:</td>
+                <td>Портимао (Португалия)</td>
+                <td>5-6 ноября</td>
+              </tr>
+            </table>
+          </div>
+        </div>
+      </section>
+      <section class="track">
+        <div class="container">
+          <div class="track__inner">
+            <h3 class="track__title">ТРЕК ПОРТИМАО</h3>
+            <p class="track__text">
+              Autodromo Internacional do Algarve находится в одноименном регионе
+              на юге Португалии, недалеко от города Портиман. Открытый в октябре
+              2008 года автогоночный комплекс является одним из самых
+              современных в Европе, раскинувшись на площади около 300 гектаров
+              среди холмов, окружающих португальский город, а длина самой трассы
+              составляет 4684 метра.
+            </p>
+            <img class="tracki__img" src="images/track.png" alt="" />
+          </div>
+        </div>
+      </section>
+      <section class="evo">
+        <div class="evo-black">
+          <div class="container">
+            <div class="evo-black__inner">
+              <div class="evo-black__info">
+                <h3 class="evo-black__title">СУПЕР ТРОФЕО ЭВО</h3>
+                <div class="evo-black__infobox">
+                  <p class="evo-black__text">
+                    Новый Huracán Super Trofeo EVO достигает еще больших высот,
+                    чем его прославленный предшественник, благодаря полностью
+                    переработанной аэродинамике. Huracán Super Trofeo EVO
+                    является идеальной стартовой площадкой для всех водителей,
+                    которые хотят начать карьеру в гонках класса GT.
+                  </p>
+                  <p class="evo-black__text">
+                    Huracán EVO — это эволюция самого успешного Lamborghini с
+                    двигателем V10. В результате тонкой настройки и
+                    усовершенствования существующих функций в сочетании с новыми
+                    конструктивными решениями, повышающими производительность,
+                    автомобиль выделяется своей способностью предугадывать и
+                    удовлетворять поведение, ожидания и желания водителя.
+                  </p>
+                </div>
+              </div>
+              <img
+                class="evo__black_img"
+                src="images/evo.png"
+                alt="Huracán Super Trofeo EVO"
+              />
+              <dl class="evo__descr_list">
+                <div>
+                  <dd>ПЕРЕМЕЩЕНИЕ</dd>
+                  <dt>5204 см³</dt>
+                </div>
+                <div>
+                  <dd>КРУТЯЩИЙ МОМЕНТ</dd>
+                  <dt>570 Нм при 6500 об/мин</dt>
+                </div>
+                <div>
+                  <dd>МОЩНОСТЬ (л.с.) / МОЩНОСТЬ (КВТ)</dd>
+                  <dt>620 л.с. при 8250 об/мин</dt>
+                </div>
+                <div>
+                  <dd>МАКС. СКОРОСТЬ</dd>
+                  <dt>325 км /ч</dt>
+                </div>
+                <div>
+                  <dd>0-100 КМ/Ч</dd>
+                  <dt>2,9 с</dt>
+                </div>
+              </dl>
+            </div>
+          </div>
+        </div>
+        <div class="evo-white">
+          <div class="container">
+            <div class="evo-white__inner">
+              <p class="evo-white__text">
+                Его неповторимый дизайн — это естественная эволюция культовых
+                линий Huracán, включающая новые сложные решения, поднимающие
+                производительность и вызывающие эмоции на невиданный ранее
+                уровень.
+              </p>
+              <p class="evo-white__text">
+                Беспрецедентный обвес был разработан инженерами отдела
+                автоспорта Automobili Lamborghini в сотрудничестве с Dallara
+                Engineering и Lamborghini Centro Stile. Последний также
+                разработал стартовую ливрею для автомобиля в честь партнерства
+                между Lamborghini Squadra Corse и Roger Dubuis, которое началось
+                в 2018 году.
+              </p>
+              <p class="evo-white__text">
+                Среди наиболее очевидных изменений в обвесе Lamborghini Huracan
+                Super Trofeo EVO — задний спойлер на заднем капоте и верхний
+                воздухозаборник, которые делают его мгновенно узнаваемым для
+                зрителей.
+              </p>
+              <div class="evo-white__video">
+                <a class="evo-white__video_link" href="#">
+                  <img src="images/evo-icon.svg" alt="" />
+                  <span>смотреть онлайн</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="blog">
+        <div class="container">
+          <h3 class="blog__title">БЛОГ</h3>
+          <div class="blog__slider swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide blog__item">
+                <img class="blog__item_img" src="images/blog-1.jpg" alt="" />
+                <h4 class="blog__item_title">
+                  НЕЛЬСОН ПИКЕ СТАЛ ПОБЕДИТЕЛЕМ ГРАНД-ФИНАЛА В ПОРТИМАНЕ
+                </h4>
+                <p class="blot__item_text">
+                  Нельсон Пике-младший из Ansa Motorsports обеспечил возвращение
+                  титула Lamborghini Super Trofeo Grand Finals в Северную
+                  Америку впервые с 2017 года после победы и второе место в паре
+                  50-минутных гонок на Autodromo Nacionale do Algarve в
+                  Портимане.Между тем, титул Pro-Am был подорван, поскольку
+                  Брайан Ортис и Себастьян Карасо из
+                </p>
+                <a class="blog__item_link" href="#">читать подробнее...</a>
+              </div>
+              <div class="swiper-slide blog__item">
+                <img class="blog__item_img" src="images/blog-2.jpg" alt="" />
+                <h4 class="blog__item_title">ГРАНД ФИНАЛ. ДЕНЬ 1</h4>
+                <p class="blot__item_text">
+                  Утренний дождь означал, что мокрая гонка была объявлена ​​до
+                  старта, и перед большинством экипажей стоял выбор:
+                  использовать слики или мокрые шины. Большинство участников
+                  предпочли мокрую трассу, но поулист Спинелли начал гонку на
+                  сликах и сразу же поплатился за это. Huracan № 61 опустился
+                  вниз, заняв всего 28-е место, поскольку
+                </p>
+                <a class="blog__item_link" href="#">читать подробнее...</a>
+              </div>
+              <div class="swiper-slide blog__item">
+                <img class="blog__item_img" src="images/blog-1.jpg" alt="" />
+                <h4 class="blog__item_title">
+                  НЕЛЬСОН ПИКЕ СТАЛ ПОБЕДИТЕЛЕМ ГРАНД-ФИНАЛА В ПОРТИМАНЕ
+                </h4>
+                <p class="blot__item_text">
+                  Нельсон Пике-младший из Ansa Motorsports обеспечил возвращение
+                  титула Lamborghini Super Trofeo Grand Finals в Северную
+                  Америку впервые с 2017 года после победы и второе место в паре
+                  50-минутных гонок на Autodromo Nacionale do Algarve в
+                  Портимане.Между тем, титул Pro-Am был подорван, поскольку
+                  Брайан Ортис и Себастьян Карасо из
+                </p>
+                <a class="blog__item_link" href="#">читать подробнее...</a>
+              </div>
+              <div class="swiper-slide blog__item">
+                <img class="blog__item_img" src="images/blog-2.jpg" alt="" />
+                <h4 class="blog__item_title">ГРАНД ФИНАЛ. ДЕНЬ 1</h4>
+                <p class="blot__item_text">
+                  Утренний дождь означал, что мокрая гонка была объявлена ​​до
+                  старта, и перед большинством экипажей стоял выбор:
+                  использовать слики или мокрые шины. Большинство участников
+                  предпочли мокрую трассу, но поулист Спинелли начал гонку на
+                  сликах и сразу же поплатился за это. Huracan № 61 опустился
+                  вниз, заняв всего 28-е место, поскольку
+                </p>
+                <a class="blog__item_link" href="#">читать подробнее...</a>
+              </div>
+            </div>
+            <div class="blog__button swiper-button-left">
+              <img src="images/arrow-left.svg" alt="" />
+            </div>
+            <div class="blog__button swiper-button-right">
+              <img src="images/arrow-right.svg" alt="" />
+            </div>
+          </div>
+
+          <div class="blog__quote">
+            <div class="blog__quote_box">
+              <blockquote class="blockquote">
+                <cite class="blockquote__name">
+                  <span>Чемпион Am</span>
+                  Анджей Левандовски
+                </cite>
+                <p class="blockquote__text">
+                  «Я очень доволен титулом, моей второй победой в Am и четвертой
+                  в Super Trofeo, мне очень приятно делать это в этом году,
+                  потому что уровень соревнований очень высок. Должен сказать,
+                  сегодня было довольно легко, так как я все время контролировал
+                  ситуацию».
+                </p>
+              </blockquote>
+              <blockquote class="blockquote">
+                <cite class="blockquote__name">
+                  <span>Обладатель кубка Lamborghini</span>
+                  Жерар ван дер Хорст
+                </cite>
+                <p class="blockquote__text">
+                  «Я очень доволен титулом, моей второй победой в Am и четвертой
+                  в Super Trofeo, мне очень приятно делать это в этом году,
+                  потому что уровень соревнований очень высок. Должен Обладатель
+                  кубка Lamborghini добавил: «Здорово выиграть титул, спустя
+                  четыре года после последнего
+                </p>
+              </blockquote>
+            </div>
+            <img class="blog__quote_img" src="images/quote.png" alt="" />
+          </div>
+        </div>
+      </section>
     </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__top">
+          <ul class="footer__info">
+            <li class="footer__info_item">
+              <dl>
+                <dt>ОБЩИЕ</dt>
+                <dd><a href="tel:+351282405600">+(351) 282 405 600</a></dd>
+                <dd><a href="tel:+351282405697">+(351) 282 405 697</a></dd>
+                <dd>
+                  <a href="mailto:info@autodromodoalgarve.com"
+                    >info@autodromodoalgarve.com</a
+                  >
+                </dd>
+              </dl>
+            </li>
+            <li class="footer__info_item">
+              <dl>
+                <dt>БИЛЕТЫ</dt>
+                <dd><a href="tel:+351282405600">+(351) 282 405 600</a></dd>
+                <dd>
+                  <a href="mailto:tickets@autodromodoalgarve.com"
+                    >tickets@autodromodoalgarve.com</a
+                  >
+                </dd>
+              </dl>
+            </li>
+            <li class="footer__info_item">
+              <ul class="social__list">
+                <li class="social__list_item">
+                  <a class="social__lisl_link" href="#">
+                    <img
+                      class="social__link_icon"
+                      src="images/youtube.svg"
+                      alt=""
+                    />
+                  </a>
+                </li>
+                <li class="social__list_item">
+                  <a class="social__lisl_link" href="#">
+                    <img
+                      class="social__link_icon"
+                      src="images/instagram.svg"
+                      alt=""
+                    />
+                  </a>
+                </li>
+                <li class="social__list_item">
+                  <a class="social__lisl_link" href="#">
+                    <img
+                      class="social__link_icon"
+                      src="images/facebook.svg"
+                      alt=""
+                    />
+                  </a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+          <div class="footer__address">
+            <p class="footer__address_title">АДРЕС</p>
+            <address class="footer__address_text">
+              <a
+                class="footer__adress_map"
+                href="https://www.google.com/search?q=Sitio+do+Escampadinho%2C+Mexilhoeira+Grande%2C+8500-148+Portimao%2C+Portugal&oq=Sitio+do+Escampadinho%2C+Mexilhoeira+Grande%2C+8500-148+Portimao%2C+Portugal&gs_lcrp=EgZjaHJvbWUyBggAEEUYOdIBBzI5NWowajSoAgCwAgA&sourceid=chrome&ie=UTF-8"
+                target="_blank"
+              >
+                Sitio do Escampadinho, Mexilhoeira Grande, 8500-148 Portimao,
+                Portugal</a
+              >
+            </address>
+            <div id="map">
+              <iframe
+                class="footer__maps"
+                src="https://www.google.com/maps/embed?pb=..."
+              >
+              </iframe>
+            </div>
+          </div>
+        </div>
+        <div class="footer__bottom">
+          <a class="footer__bottom_link" href="#"
+            >Design by Varvara Prokopchuk</a
+          >
+          <a class="footer__logo" href="#">
+            <img class="footer__logo-img" src="images/logo.svg" alt="logo" />
+          </a>
+          <a class="footer__bottom_link" href="#"
+            >Политика конфиденциальности
+          </a>
+        </div>
+      </div>
+    </footer>
+
+    <script
+      src="https://maps.googleapis.com/maps/api/js?
+key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&
+v=weekly"
+      defer
+    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
