--- a/lamborghini.html
+++ b/lamborghini.html
@@ -52,6 +52,37 @@
               <a class="menu-link" href="#">Контакты</a>
             </li>
           </ul>
+
+          <button class="menu-btn">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+
+          <ul class="menu-mobile menu__open">
+            <li class="menu-item">
+              <a class="menu-link" href="#"> О гонке</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">Трек</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">Lamborghini Seper trofeo</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">Новости</a>
+            </li>
+
+            <li class="menu-item">
+              <a class="menu-link" href="#">Купить билеты</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">Смотреть онлайн</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">Контакты</a>
+            </li>
+          </ul>
         </nav>
       </div>
     </header>
